Pass configuration to classes where possible instead of using global object

--- a/UAlbertaBot/bin/AK_Config.json
+++ b/UAlbertaBot/bin/AK_Config.json
@@ -79,7 +79,10 @@
     {
         "UseBuildOrderSearch"       : true,
         "UseStrategyIO"             : true,
-        "UseAutoObserver"           : false
+        "UseAutoObserver"           : false,
+        
+        "ReadDirectory"             : "bwapi-data/read/",
+        "WriteDirectory"            : "bwapi-data/write/"
     },
     
     "Tools" :
