Pass configuration data and reduce usage of global instance

--- a/UAlbertaBot/bin/AK_Config.json
+++ b/UAlbertaBot/bin/AK_Config.json
@@ -49,12 +49,15 @@
         "BuildingSpacing"           : 1,
         "PylonSpacing"              : 3
     },
+	
+	"Log":
+	{
+		"ErrorLogFilename"          : "bwapi-data/AI/UAlbertaBot_ErrorLog.txt",
+        "LogAssertToErrorFile"      : false,
+	}
 
     "Debug" :
-    {
-        "ErrorLogFilename"          : "bwapi-data/AI/UAlbertaBot_ErrorLog.txt",
-        "LogAssertToErrorFile"      : false,
-        
+    {        
         "DrawGameInfo"              : true,   
         "DrawUnitHealthBars"        : true,
         "DrawProductionInfo"        : true, 
