Parse all configuration file in the confiugration object model - Use object model for configuring StrategyManager - Provide unit test for configuration loading and parsing

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ UAlbertaBot/bin/UAlbertaBot.iobj
 /SparCraft/bin/test
 *.bat
 *.lastcodeanalysissucceeded
+/SparCraft/VisualStudio/x64
+/UAlbertaBot/VisualStudio/x64
