Compile exe application in Release mode

--- a/SparCraft/CMakeLists.txt
+++ b/SparCraft/CMakeLists.txt
@@ -1,7 +1,14 @@
 file(GLOB SparCraft_SOURCES "source/*.cpp")
 file(GLOB_RECURSE SparCraft_HEADERS "source/*.h")
 
-set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_SSCAIT_DIR}/include")
+if (MSVC14)
+	set(BWAPI_LIB_DIR "$ENV{BWAPI_DIR}/lib")
+	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_DIR}/include")
+else()
+	set(BWAPI_LIB_DIR "$ENV{BWAPI_SSCAIT_DIR}/lib")
+	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_SSCAIT_DIR}/include")
+endif()
+
 include_directories(
     ${BWAPI_INCLUDE_DIR}
     source
@@ -11,6 +18,8 @@ add_definitions(-DNOMINMAX)
 
 add_library(SparCraft 
     ${SparCraft_SOURCES}
+	source/torch/TorchTools.cpp
+	source/torch/TorchFrame.cpp
 )
 
 if (MSVC14)
