Add SSCAIT settings for Debug using CMake

--- a/BOSS/CMakeLists.txt
+++ b/BOSS/CMakeLists.txt
@@ -3,12 +3,12 @@ list(REMOVE_ITEM BOSS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/source/StarCraftGUI.c
 
 file(GLOB_RECURSE BOSS_HEADERS "source/*.h")
 
-if (MSVC14)
-	set(BWAPI_LIB_DIR "$ENV{BWAPI_DIR}/lib")
-	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_DIR}/include")
-else()
+if (AKBOT_SSCAIT)
 	set(BWAPI_LIB_DIR "$ENV{BWAPI_SSCAIT_DIR}/lib")
 	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_SSCAIT_DIR}/include")
+else()
+	set(BWAPI_LIB_DIR "$ENV{BWAPI_DIR}/lib")
+	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_DIR}/include")
 endif()
 
 include_directories(
