--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 project (AKBot)
 cmake_minimum_required (VERSION 2.6)
+option(AKBOT_SSCAIT "Generate SSCAIT supported version")
 
 add_subdirectory (BOSS)
 add_subdirectory (SparCraft) 
