--- a/UAlbertaBot/VisualStudio/AkBot.Tests.vcxproj
+++ b/UAlbertaBot/VisualStudio/AkBot.Tests.vcxproj
@@ -96,7 +96,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;UNITTESTPRJ="$(ProjectDir)..\..\AkBot.Tests";%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;UNITTESTPRJ="$(ProjectDir)..\..\AkBot.Tests";NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <AdditionalIncludeDirectories>$(BWAPI_DIR)/include;$(SolutionDir)..\..\UAlbertaBot\Source\;$(SolutionDir)..\..\AKBot.Tests\TestLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -111,7 +111,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <AdditionalIncludeDirectories>$(SolutionDir)../../UAlbertaBot/source;$(SolutionDir)../../AkBot.Tests/TestLib;$(SolutionDir)../../AkBot.Tests/Shared;$(BWAPI_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -150,7 +150,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\AkBot.Tests\BaseLocationManagerTest.cpp" />
     <ClCompile Include="..\..\AkBot.Tests\BotConfigurationTest.cpp" />
+    <ClCompile Include="..\..\AkBot.Tests\NullLogger.cpp" />
     <ClCompile Include="..\..\AkBot.Tests\Shared\BulletShared.cpp" />
     <ClCompile Include="..\..\AkBot.Tests\Shared\ForceShared.cpp" />
     <ClCompile Include="..\..\AkBot.Tests\Shared\GameShared.cpp" />
@@ -167,11 +169,13 @@
     <ClCompile Include="..\..\AkBot.Tests\unittest1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="UAlbertaBot.vcxproj">
+    <ProjectReference Include="AkBot.vcxproj">
       <Project>{572af06a-4078-4c5a-abce-b29c84050e6d}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\AkBot.Tests\NullLogger.h" />
+    <ClInclude Include="..\..\AkBot.Tests\PlainOpponentView.h" />
     <ClInclude Include="..\..\AkBot.Tests\Shared\Templates.h" />
     <ClInclude Include="..\..\AkBot.Tests\stdafx.h" />
     <ClInclude Include="..\..\AkBot.Tests\targetver.h" />
