--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj
@@ -39,6 +39,7 @@
     <ClCompile Include="..\Source\BWAPIScreenCanvas.cpp" />
     <ClCompile Include="..\Source\CombatCommander.cpp" />
     <ClCompile Include="..\Source\CombatSimulation.cpp" />
+    <ClCompile Include="..\Source\commands\BWAPICommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\CommandManager.cpp" />
     <ClCompile Include="..\Source\Common.cpp" />
     <ClCompile Include="..\Source\DebugTools.cpp" />
@@ -104,6 +105,7 @@
     <ClInclude Include="..\Source\BWAPIScreenCanvas.h" />
     <ClInclude Include="..\Source\CombatCommander.h" />
     <ClInclude Include="..\Source\CombatSimulation.h" />
+    <ClInclude Include="..\Source\commands\BWAPICommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandManager.h" />
     <ClInclude Include="..\Source\Common.h" />
