Create command executor for the unit related tasks

--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile Include="..\Source\CombatSimulation.cpp" />
     <ClCompile Include="..\Source\commands\BWAPICommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\CommandManager.cpp" />
+    <ClCompile Include="..\Source\commands\UnitCommandExecutor.cpp" />
     <ClCompile Include="..\Source\Common.cpp" />
     <ClCompile Include="..\Source\DebugTools.cpp" />
     <ClCompile Include="..\Source\debug\BaseLocationManagerDebug.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="..\Source\commands\BWAPICommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandManager.h" />
+    <ClInclude Include="..\Source\commands\UnitCommandExecutor.h" />
     <ClInclude Include="..\Source\Common.h" />
     <ClInclude Include="..\Source\DebugTools.h" />
     <ClInclude Include="..\Source\debug\BaseLocationManagerDebug.h" />
